overflow fix

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,7 @@
+*{
+    overflow-x: hidden;
+}
+
 body {
     background-image: url("../assets/salle.png");
     height: 100vh;
